Changes in version 1.1-4 (x/x/2015)


Changes in version 1.1-3 (9/2/2015)
    * two-opt now works correctly with asymetric TSPs 
      (bug report by Luis Martinez).

Changes in version 1.1-2 (7/30/2015)
    * Fixed imports for non-base packages.

Changes in version 1.1-1 (5/15/2015)
    * improved speed of C code.
    * compatibility with new release of testthat

Changes in version 1.1-0 (3/14/2015)
    * default method is now arbitrary_insertion with two_opt refinement.
    * we use foreach (use doParallel) to compute repetitions in parallel
    * ETSP (Euclidean TSP) added.
    * generic and arguments for tour_lengh have changed 
      (fist argument is now a tour).
    * method "2-opt" was renamed to "two_opt" so it can also be used as a 
        proper variable name.
    * solve_TSP gained methods "identity" and "random".
    * solve_TSP gained options "repetition" and "two_opt".

Changes in version 1.0-10 (2/3/2015)
    * added check for argument cut in cut_tour
    * Finding concord and linkern is now case 
        insensitive (Reported by Mark Otto)

Changes in version 1.0-9 (7/16/2014)
    * Check for NAs in distances.
    * +INF and -INF are now handled in solve_TSP.
    * fixed single quotes in vignette.

Changes in version 1.0-8 (9/6/2013)
    * service release.

Changes in version 1.0-7 (8/22/2012)
    * Added PACKAGE argument to C calls.

Changes in version 1.0-6 (11/29/2011)
    * Fixed bug in read_TSPLIB.

Changes in version 1.0-5 (11/10/2011)
    * Changed constructor for TOUR to allow for method and tour_length.
    * Bugfix: labels in creator ATSP() (reported by Tiffany Chen)

Changes in version 1.0-4 (8/31/2011)
    * Fixed bug with missing row/column labels in as.ATSP() 
	(reported by Ian Deters)

Changes in version 1.0-3 (5/26/2011)
    * Service release

Changes in version 1.0-2 (1/14/2011)
    * Fixed Windows/R bug with temp files.
    * Fixed the code for SpatialLines thanks to Roger Bivand.

Initial version 0.1-2 (9/18/2006) 